tests/baselines/reference/privateStaticNotAccessibleInClodule.errors.txt
==== tests/cases/compiler/privateStaticNotAccessibleInClodule.ts (1 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        private foo: string;
        private static bar: string;
    }
    
    module C {
        export var y = C.bar; // error
                         ~~~
!!! error TS2107: 'C.bar' is inaccessible.
    }